[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menus/StatsMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/SlickerTheme.tres" type="Theme" id=2]
[ext_resource path="res://UI/SlickerTitleDynamicFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/SlickerSmallDynamicFont.tres" type="DynamicFont" id=4]

[node name="StatsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -33.0
margin_right = 33.0
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Title"]
margin_left = 33.0
margin_top = 22.0
margin_right = 33.0
margin_bottom = 22.0

[node name="TitleLabel" type="Label" parent="Title"]
margin_right = 66.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
text = "stats"

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 50.0
margin_top = -40.0
margin_right = -50.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer"]
margin_left = 35.0
margin_right = 185.0
margin_bottom = 108.0
rect_min_size = Vector2( 150, 108 )
scroll_horizontal_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/ScrollContainer"]
margin_right = 20.0
margin_bottom = 18.0

[node name="StatsNameLabel" type="Label" parent="CenterContainer/ScrollContainer/HBoxContainer"]
margin_right = 8.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 4 )

[node name="StatsValueLabel" type="Label" parent="CenterContainer/ScrollContainer/HBoxContainer"]
margin_left = 12.0
margin_right = 20.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 4 )

[node name="BackButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -17.0
margin_top = -22.0
margin_right = 17.0
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="BackButton" to="." method="_on_BackButton_mouse_entered"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
